--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,3 +1,6 @@
+html{
+    overflow-x: initial !important;
+}
 .sidebar{
     z-index: -1;
     position: fixed;
